<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_email_title"
        android:inputType="textEmailAddress"
        android:importantForAutofill="yes" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        android:importantForAutofill="yes" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_confirm_password"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        android:importantForAutofill="yes" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:background="@drawable/btn_rounded"
        android:backgroundTint="@color/yellow_500"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_having_account"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/btn_rounded"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginTop="16dp"
        android:gravity="center"/>

</LinearLayout>